scrollbar fixed horizontal

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -41,7 +41,8 @@ main {
 }
 
 *::-webkit-scrollbar {
-	width: 10px;
+	width: 9px;
+	height: 9px;
 	background-color: #f5f5f5;
 }
 
